# EstyAssistant

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  STATUS.md  fly.toml  pyproject.toml
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  Dockerfile.fly  pyproject.toml
backend/src/api/: credentials.py  main.py  models.py  s3.py
backend/src/api/routes/: auth.py  bundles.py  listing.py  listings.py  mockups.py  process.py  publish.py  upload.py
backend/src/api/stores/: __init__.py  dynamo_store.py  supabase_store.py
backend/tests/: test_api_routes.py  test_auth_publish.py  test_background.py  test_bundles_api.py  test_etsy_api.py  test_listings.py  test_rate_limit.py  test_stores.py
data/: sample_listings.csv
frontend/: .env.local.example
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ImageCompare.tsx  KeyboardShortcuts.tsx  ListingEditor.tsx  ListingHistory.tsx  MockupGallery.tsx  SeoScore.tsx  Toast.tsx
infra/: template.yaml
memory/: MEMORY.md  feedback_listing_style.md  feedback_photo_quality.md  feedback_workflow.md  project_phase1_complete.md  user_profile.md
scripts/: deploy-backend.sh  setup-free.sh
sketches/: Tram.json  Tram2_clean.json  Tram_clean_8x10.json  flower_clean_small.json
src/etsy_assistant/: __init__.py  bundles.py  cli.py  config.py  etsy_api.py  pipeline.py
tests/: conftest.py  test_autocrop.py  test_bundles.py  test_contrast.py  test_keywords.py  test_mockup_bytes.py  test_output_bytes.py  test_perspective.py  test_pipeline.py  test_pipeline_bytes.py  test_resize.py  test_watermark.py
(+12 files in other folders)
